main.cpp refactored

--- a/rhi/rhizome.vcxproj
+++ b/rhi/rhizome.vcxproj
@@ -69,7 +69,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\inc;..\inc\NvFBC;.\rhi-utils;.\rhi-audio;.\rhi-encoder-hw-nvh264;.\rhi-encoder-sw-x264;.\rhi-server-live555;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\inc;..\inc\NvFBC;.\rhi-utils;.\rhi-audio;.\rhi-encoder-hw-nvh264;.\rhi-encoder-sw-x264;.\rhi-server-live555;.\rhi-server;.\rhi-core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -87,6 +87,7 @@
     <ClCompile Include="rhi-encoder-sw-x264\x264Encoder.cpp" />
     <ClCompile Include="rhi-server-live555\H264LiveServerMediaSession.cpp" />
     <ClCompile Include="rhi-server-live555\LiveSourceWithx264.cpp" />
+    <ClCompile Include="rhi-server\RhiServer.cpp" />
     <ClCompile Include="rhi-utils\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -95,6 +96,7 @@
     <ClInclude Include="rhi-encoder-sw-x264\X264Encoder.h" />
     <ClInclude Include="rhi-server-live555\H264LiveServerMediaSession.h" />
     <ClInclude Include="rhi-server-live555\LiveSourceWithx264.h" />
+    <ClInclude Include="rhi-server\RhiServer.h" />
     <ClInclude Include="rhi-utils\Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
